src/sass/component/navbar.scss
.navbar {
  width: 10vw;
  height: 100vh;
}


.navbar ul {
  list-style: none;
  padding: 0px 10px;
}

.navigation {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 12vw;
  height: 100vh;
  box-sizing: border-box;
  padding: 10px 0px;
  background: rgba(245, 242, 240, 0.9);
  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
}


.navigation .logo{
  display: flex;
  width: 50px;
  height: 50px;
  justify-content: center;
  align-items: center;
  padding: 15px auto;
  background: rgba(0, 0, 0, 0.2);
  font-family: 'Gloria Hallelujah', cursive;
  color: white;
  border-radius: 50%;
  border: 1px solid white;
  box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
  background: #DD5E89;  /* fallback for old browsers */
  background: -webkit-linear-gradient(#F7BB97, #DD5E89);
  background: -moz-linear-gradient(#F7BB97, #DD5E89);
  background: -o-linear-gradient(#F7BB97, #DD5E89);
  background: linear-gradient(#F7BB97, #DD5E89);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.navigation ul {
  list-style: none;
  padding: 0px 10px;
  text-decoration: none;
}

.navigation li {
  padding: 7.5px;
  cursor: pointer;
}

.navigation a {
  color: rgba(0, 0, 0, 0.5);
  text-decoration: none;
}

